[gd_scene load_steps=5 format=3 uid="uid://to3rq41npefl"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_x6ri4"]
[ext_resource type="Texture2D" uid="uid://p5rdqt0ge8ou" path="res://assets/dark_background_example.png" id="2_yynig"]
[ext_resource type="Theme" uid="uid://mhsdqp7ljmrw" path="res://scripts/autoload/sandy.tres" id="3_cikaq"]
[ext_resource type="Texture2D" uid="uid://dyoanalusoa8l" path="res://assets/loading/Arabest_Frames_00066.png" id="4_waijc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 26.0
offset_right = 10.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x6ri4")

[node name="WhiteGrid" type="Sprite2D" parent="."]
position = Vector2(995, 914)
scale = Vector2(2.65668, 2.27022)
texture = ExtResource("2_yynig")

[node name="Settings_Button" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -596.0
offset_top = 344.0
offset_right = -396.0
offset_bottom = 402.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_cikaq")
theme_override_colors/icon_normal_color = Color(0.0470588, 0.8, 0.8, 1)
text = "Settings
"

[node name="Start_Button" type="Button" parent="."]
layout_direction = 1
layout_mode = 2
offset_left = 306.0
offset_top = 472.0
offset_right = 606.0
offset_bottom = 772.0
theme = ExtResource("3_cikaq")

[node name="ArabestFrames00066" type="Sprite2D" parent="."]
position = Vector2(1000, 400)
texture = ExtResource("4_waijc")

[connection signal="pressed" from="Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
