[gd_scene load_steps=7 format=3 uid="uid://bcgcx6mtu5e0c"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_emop5"]
[ext_resource type="Texture2D" uid="uid://bnj7oej4tusg2" path="res://assets/white_grid.png" id="1_eqom0"]
[ext_resource type="Script" path="res://scripts/UploadFromFile.gd" id="1_jtuo7"]
[ext_resource type="Script" path="res://scripts/UploadFileDialog.gd" id="3_igrqs"]
[ext_resource type="Script" path="res://scripts/RadioButtons.gd" id="5_kiy5b"]
[ext_resource type="ButtonGroup" uid="uid://d1hbm0s2gulx5" path="res://groups/system_selection_buttons.tres" id="6_anvd2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emop5")

[node name="WhiteGrid" type="Sprite2D" parent="."]
position = Vector2(803, 461)
scale = Vector2(0.996614, 0.999074)
texture = ExtResource("1_eqom0")

[node name="UploadFromFile" type="Button" parent="."]
layout_mode = 0
offset_left = 1263.0
offset_top = 164.0
offset_right = 1513.0
offset_bottom = 214.0
text = "Upload From File"
script = ExtResource("1_jtuo7")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = -4.0
offset_right = 172.0
offset_bottom = 47.0
text = "Back"

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 723.0
offset_top = 406.0
offset_right = 1107.0
offset_bottom = 649.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -66.0
offset_right = 20.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "This is a test "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(400, 300)
ok_button_text = "Open"
file_mode = 0
access = 2
script = ExtResource("3_igrqs")

[node name="ToLeitnerSystem" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 475.0
offset_right = 645.0
offset_bottom = 525.0
text = "Leitner System"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 224.0
offset_right = 353.0
offset_bottom = 342.0
script = ExtResource("5_kiy5b")

[node name="UseLeitnerSystem" type="CheckBox" parent="GridContainer" groups=["LearningSystemSelection"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
button_group = ExtResource("6_anvd2")
text = "Leitner System"

[node name="UseSimpleQueue" type="CheckBox" parent="GridContainer" groups=["LearningSystemSelection"]]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
button_group = ExtResource("6_anvd2")
text = "Simple Queue"

[node name="ToSimpleQueue" type="Button" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 379.0
offset_right = 651.0
offset_bottom = 426.0
text = "Simple Queue"

[connection signal="pressed" from="UploadFromFile" to="UploadFromFile" method="_on_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Back" to="Back" method="_on_pressed"]
[connection signal="pressed" from="Panel/Button" to="FileDialog" method="_on_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_file_selected"]
[connection signal="pressed" from="ToLeitnerSystem" to="." method="_on_to_leitner_system_pressed"]
[connection signal="toggled" from="GridContainer/UseLeitnerSystem" to="GridContainer" method="_on_use_leitner_system_toggled"]
[connection signal="toggled" from="GridContainer/UseSimpleQueue" to="GridContainer" method="_on_use_simple_queue_toggled"]
[connection signal="pressed" from="ToSimpleQueue" to="." method="_on_to_simple_queue_pressed"]
